# HOTCOMMENT

./: .env.example  AGENTS.md  README.md  SKILL.md  activity_center_raw.txt  auto_howto吃透人生.txt  auto_草台就是最好的班子.txt  auto_静音车厢.txt  demo.py  main.py  plan-hotCommentHub.prompt.md  plan.prompt.md  pyproject.toml  quick_publish.py  quick_publish_v2.py  run_prod.py
config/: settings.yaml
config/personas/: beauty_blogger.yaml  commentator.yaml  foodie.yaml  gadget_reviewer.yaml  travel_expert.yaml
config/prompts/: comment_analysis.txt  content_generation.txt
data/drafts/: 2026-05-25_时事_小米空调抽真空造假.md  2026-05-25_时事_杨梅信任危机.md  2026-05-25_时事_老头乐能卖不能上路.md  2026-05-25_时事_高铁静音车厢.md  2026-05-25_真实热搜_杨梅泡药事件.md  2026-05-25_网红美食测评_618避坑指南.md  2026-05-25_网红美食测评_乐扣锅实测.md
data/reports/: 2026-05-25_daily.md  2026-05-26_daily.md
scripts/: gen_cover_legacy.py  make_cover.py
src/: intent_parser.py  orchestrator.py  scheduler.py
src/ai/: comment_analyzer.py  content_generator.py  quality_checker.py
src/personas/: manager.py
src/publish/: base.py  bilibili_publisher.py  engine.py  weibo_publisher.py  xhs_browser_publisher.py  xhs_publisher_v2.py  xiaohongshu_publisher.py  zhihu_publisher.py
src/reports/: daily_digest.py
src/search/: base.py  bilibili_searcher.py  douyin_searcher.py  engine.py  reddit_searcher.py  smzdm_searcher.py  toutiao_searcher.py  twitter_searcher.py  weibo_searcher.py  xiaohongshu_searcher.py  zhihu_searcher.py
src/utils/: file_store.py  logger.py  opencli.py
